Few minor changes and remove custom mod wget